--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=password
 
 spring.jpa.show-sql=true
 logging.level.org.hibernate=debug
+
+spring.jackson.serialization.write-dates-as-timestamps=false
