--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/fal
 spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.password=user
 #spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 logging.level.org.hibernate=debug
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
+#logging.file=myapp.log
+
 
 spring.jackson.serialization.write-dates-as-timestamps=false
